Add the ability to search for a dino name
Super Mega Bonus Credit Complete!

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
         <div class="top-bar-right">
           <ul class="menu">
-            <li><input type="search" placeholder="Search"></li>
-            <li><button type="button" class="button">Search</button></li>
+            <li><input class="searchBar" type="search" placeholder="Search"></li>
+            <li><button type="button" class="searchButton button">Search</button></li>
           </ul>
         </div>
       </div>
