Add some style to the header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
@@ -15,9 +16,9 @@
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
             <li class="menu-text">Dinoplasty</li>
-            <li><a class="carnivore-menu" href="#">Carnivore</a></li>
-            <li><a class="herbivore-menu" href="#">Herbivore</a></li>
-            <li><a class="omnivore-menu" href="#">Omnivore</a></li>
+            <li class="transition"><a class="carnivore-menu" href="#">Carnivore</a></li>
+            <li class="transition"><a class="herbivore-menu" href="#">Herbivore</a></li>
+            <li class="transition"><a class="omnivore-menu" href="#">Omnivore</a></li>
           </ul>
         </div>
         <div class="top-bar-right">
